--- a/sections/footer-bottom.liquid
+++ b/sections/footer-bottom.liquid
@@ -27,8 +27,7 @@
                 {% if alignment == 'left' %}
                     <div class="bottom--footer---copyright copyright--desktop">
                         <ul class="bottom--footer---links">
-                            <li><a href="{{ routes.root_url }}">&copy; {{ 'now' | date: "%Y" }}, {{ shop.name }}</a></li><!--
-                            --><li>{{ powered_by_link }}</li>
+                            <li><a href="{{ routes.root_url }}">&copy; {{ 'now' | date: "%Y" }}, {{ shop.name }}</a></li>
                         </ul>
                     </div>
                 {% endif %}
@@ -55,8 +54,7 @@
         </div>
         <div class="bottom--footer---copyright copyright--mobile">
             <ul class="bottom--footer---links">
-                <li><a href="{{ routes.root_url }}">&copy; {{ 'now' | date: "%Y" }}, {{ shop.name }}</a></li><!--
-                --><li>{{ powered_by_link }}</li>
+                <li><a href="{{ routes.root_url }}">&copy; {{ 'now' | date: "%Y" }}, {{ shop.name }}</a></li>
             </ul>
         </div>
         </div>
