--- a/sections/footer-main.liquid
+++ b/sections/footer-main.liquid
@@ -69,6 +69,7 @@
                         {% unless block.settings.title == "" %}
                             <div class="rte footer-article">{{ block.settings.richtext }}</div>
                         {% endunless %}
+                        <a href="https://obaneya-shop.com/pages/contact" class="link_contact__footer">お問合せフォーム</a>
                     </div>
 
                 {% when 'follow_on_shop' %}
