--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -49,6 +49,9 @@ Testing Cypress integration
     <div class="js site-header__nav top-links" id="top_links_wrapper">
       <ul class="site-nav {% if mega_menu_block %} mega-menu-wrapper{% endif %}" id="AccessibleNav" role="navigation">
         {% render 'nav--main', mega_menu: mega_menu_block %}
+        <li class="icon_instagram">
+          <a href="https://www.instagram.com/obaneya_jp/" target="_blank" class="site-nav__link">{% render 'theme-icon', icon: 'ig', iconClasses: 'ig' %}</a>
+        </li>
       </ul>
     </div>
     <noscript>
